# bland-onsite

./: .gitignore  README.md  SYSTEM_SUMMARY.md  demo_capacity_planning.py  design.md  main.py  pyproject.toml  test_system.py
services/: api_server.py  capacity_planning_service.py  redis_service.py
tests/: load_test.py  load_test_results.json
